k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mandel-rust-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mandel-rust-app
  template:
    metadata:
      labels:
        app: mandel-rust-app
    spec:
      containers:
      - name: mandel-rust-container
        image: horowitzathome/mandel-rust:v0.1.16-x86_64-unknown-linux-gnu
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 256m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
