k8s/deployment_java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mandel-java-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mandel-java-app
  template:
    metadata:
      labels:
        app: mandel-java-app
    spec:
      containers:
      - name: mandel-java-container
        image: horowitzathome/java-rust:v0.0.11-x86_64-unknown-linux-gnu
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 4000m
            memory: 2000Mi
          limits:
            cpu: 4000m
            memory: 2000Mi
