k8s/service_np.yaml
apiVersion: v1
kind: Service
metadata:
  name: mandel-rust-service
  annotations: 
    cloud.google.com/backend-config: '{"default": "mandel-rust-backend-config"}'
    #cloud.google.com/backend-config: '{"/hello": "hello-rest-backend-config"}'
spec:
  type: NodePort
  selector:
    app: mandel-rust-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
