k8s/service_np_java.yaml
apiVersion: v1
kind: Service
metadata:
  name: mandel-java-service
  annotations: 
    cloud.google.com/backend-config: '{"default": "mandel-java-backend-config"}'
spec:
  type: NodePort
  selector:
    app: mandel-java-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
