k8s/ingress_java_only.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mandel-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /mandel_java
        pathType: Prefix
        backend:
          service:
            name: mandel-java-service
            port:
              number: 8080
