k8s/ingress_rust_only.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mandel-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
    # cloud.google.com/backend-config: '{"/hello": "hello-rest-backend-config"}'
spec:
  rules:
  - http:
      paths:
      - path: /mandel_rust
        pathType: Prefix
        backend:
          service:
            name: mandel-rust-service
            port:
              number: 8080
